update dependencies and versions and sql crud tests

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import Experiment, Document, Query as Q\n",
+    "from ndi import Session, Document, Query as Q\n",
     "\n",
     "from ndi.database.sql import SQL\n",
     "from ndi.database.file_system import FileSystem, BinaryCollection\n",
@@ -81,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a new Experiment object and connecting it to its context\n",
-    "exp = Experiment('demo_api_core').connect(\n",
+    "# Creating a new Session object and connecting it to its context\n",
+    "exp = Session('demo_api_core').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -150,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'session_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'session_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
    ],
    "source": [
     "# Finding probes using a query\n",
-    "by_name = Q('_metadata.name') == 'intra'\n",
+    "by_name = Q('base.name') == 'intra'\n",
     "by_ref = Q('reference') < 2\n",
     "exp.find_probes(by_name & by_ref)"
    ]
@@ -241,7 +241,7 @@
     "    Document({'number': 1, 'trait': 'childish'}, 'gambino', 'rapper'),\n",
     "]\n",
     "for d in deps:\n",
-    "    og_doc.add_dependency(d)"
+    "    og_doc.add_dependant(d)"
    ]
   },
   {
@@ -261,7 +261,7 @@
     "# Accessing the context of one of the dependencies\n",
     "print(deps[2].ctx)\n",
     "\n",
-    "# Writing into that document dependency's binary fork\n",
+    "# Writing into that document dependant's binary fork\n",
     "with deps[2].binary.open_write_stream() as ws:\n",
     "    ws.write(b'Took the G out your waffle, all you got left is your ego.')"
    ]
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "# Reading from the document dependency's binary fork\n",
+    "# Reading from the document dependant's binary fork\n",
     "with deps[2].binary.open_read_stream() as rs:\n",
     "    print(rs.read(10))\n",
     "    rs.seek(53)\n",
@@ -340,7 +340,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
+       "  'session_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
        "  'parent_id': '8c10e10ca76e498f9d490f1526f60c38',\n",
        "  'asc_path': ',8c10e10ca76e498f9d490f1526f60c38',\n",
        "  'version_depth': 1,\n",
@@ -359,7 +359,7 @@
    "source": [
     "# Updating a document and saving the changes\n",
     "og_doc.data['number'] = 0\n",
-    "og_doc.save_updates()\n",
+    "og_doc.update()\n",
     "\n",
     "# Verifying that the changes were made\n",
     "#   New version of document has no dependencies\n",
@@ -376,7 +376,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
+       "  'session_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -443,8 +443,8 @@
     "print(exp.get_document_dependencies())\n",
     "print('---')\n",
     "print([\n",
-    "    d.metadata['name'] + '_v' + str(d.metadata['version_depth'])\n",
-    "    for d in db.find(Q('_metadata.type') == 'rapper')\n",
+    "    d.base['name'] + '_v' + str(d.metadata['version_depth'])\n",
+    "    for d in db.find(Q('document_class.name') == 'rapper')\n",
     "])"
    ]
   },
@@ -478,8 +478,8 @@
     "print(exp.current.get_document_dependencies())\n",
     "print('---')\n",
     "print([\n",
-    "    d.metadata['name'] + '_v' + str(d.metadata['version_depth'])\n",
-    "    for d in db.find(Q('_metadata.type') == 'rapper')\n",
+    "    d.base['name'] + '_v' + str(d.metadata['version_depth'])\n",
+    "    for d in db.find(Q('document_class.name') == 'rapper')\n",
     "])"
    ]
   }
