--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import NDI_Object, Document, Experiment, Epoch, Probe, Channel\n",
+    "from ndi import NDI_Object, Document, Session, Epoch, Probe, Channel\n",
     "from ndi import DaqSystem, FileNavigator\n",
     "from ndi.database.sql import SQL as Database\n",
     "from ndi.database.file_system import BinaryCollection\n",
@@ -85,8 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating an Experiment object and connecting it to its context\n",
-    "exp = Experiment('test_experiment').connect(\n",
+    "# Creating an Session object and connecting it to its context\n",
+    "exp = Session('test_experiment').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -313,7 +313,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
+       "  'session_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -432,7 +432,7 @@
       "text/plain": [
        "[{'_metadata': {'name': 'list-doc',\n",
        "   'type': '',\n",
-       "   'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
+       "   'session_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
@@ -472,8 +472,8 @@
      "data": {
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '874c5180856448fa8b71f3c058661bbe',\n",
+       "  'type': 'ndi_session',\n",
+       "  'session_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -489,7 +489,7 @@
    ],
    "source": [
     "# Reconnect to an experiment that already exists in database\n",
-    "Experiment('test_experiment').connect(\n",
+    "Session('test_experiment').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=True\n",
@@ -505,8 +505,8 @@
      "data": {
       "text/plain": [
        "{'_metadata': {'name': 'test_abacadaba',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '9a6d6759042c4353a89c28802457a6c5',\n",
+       "  'type': 'ndi_session',\n",
+       "  'session_id': '9a6d6759042c4353a89c28802457a6c5',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -522,7 +522,7 @@
    ],
    "source": [
     "# Create new experiment that doesn't exist in the database\n",
-    "Experiment('test_abacadaba').connect(\n",
+    "Session('test_abacadaba').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=False\n",
