--- a/example/Demo_App.ipynb
+++ b/example/Demo_App.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "from ndi.database import FileSystem\n",
     "from ndi.database.file_system import BinaryCollection\n",
-    "from ndi import Experiment, FileNavigator, DaqSystem, Document\n",
+    "from ndi import Session, FileNavigator, DaqSystem, Document\n",
     "from ndi.epoch_probe_map import VHIntanChannelGrouping\n",
     "from ndi.daqreaders.cedspike2 import CEDSpike"
    ]
@@ -64,8 +64,8 @@
     "               daq_reader=CEDSpike2,\n",
     "               epoch_probe_map_class=VHIntanChannelGrouping)\n",
     "\n",
-    "# Instantiating Experiment objects and connecting it to its context\n",
-    "e = Experiment('exp1').connect(\n",
+    "# Instantiating Session objects and connecting it to its context\n",
+    "e = Session('exp1').connect(\n",
     "    directory='./tests/data/intracell_example',\n",
     "    database=db, \n",
     "    binary_collection=bc\n",
