--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import Experiment, Document\n",
+    "from ndi import Session, Document\n",
     "from ndi.database.sql import SQL as Database\n",
     "from ndi.database.file_system import BinaryCollection\n",
     "from ndi.query import Query as Q, AndQuery, OrQuery\n",
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Creating experiment object and connecting it to database and binary collection\n",
-    "e = Experiment('test_experiment').connect(\n",
+    "e = Session('test_experiment').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc\n",
