--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel, Document\n",
+    "from ndi import database, Session, FileNavigator, DaqSystem, Channel, Document\n",
     "from ndi.daqreaders import MockReader\n",
     "from sqlalchemy import and_, or_\n",
     "from ndi import Query as Q\n",
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate Experiment object and connect to its context\n",
-    "e = Experiment(name='myExperiment3').connect(\n",
+    "# Instantiate Session object and connect to its context\n",
+    "e = Session(name='mySession3').connect(\n",
     "    database=db,\n",
     "    daq_systems=[ds, ds2]\n",
     ")"
@@ -112,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "0 myDaq2 ndi_daq_system\n",
-      "1 myExperiment3 ndi_experiment\n",
+      "1 mySession3 ndi_session\n",
       "2 myDaq1 ndi_daq_system\n",
       "3 none ndi_file_navigator\n"
      ]
@@ -121,7 +121,7 @@
    "source": [
     "# Looking through all documents in the database\n",
     "for i, document in enumerate(db.find()):\n",
-    "    print(i, document.metadata['name'] or 'none', document.metadata['type'])"
+    "    print(i, document.base['name'] or 'none', document.metadata['type'])"
    ]
   },
   {
@@ -153,17 +153,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '92447c73cdb344aab1b776eabb985bb5', 'ctx': <ndi.context.Context object at 0x12f922a30>, 'binary': <ndi.document.BinaryWrapper object at 0x12f9efd90>, 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '92447c73cdb344aab1b776eabb985bb5', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}}\n"
+      "{'id': '92447c73cdb344aab1b776eabb985bb5', 'ctx': <ndi.context.Context object at 0x12f922a30>, 'binary': <ndi.document.BinaryWrapper object at 0x12f9efd90>, 'data': {'_metadata': {'name': 'mySession3', 'type': 'ndi_session', 'session_id': '92447c73cdb344aab1b776eabb985bb5', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}}\n"
      ]
     }
    ],
    "source": [
     "# Creating ndi Query to search database on\n",
     "ndi_query = (\n",
-    "    Q('_metadata.type') == Experiment.DOCUMENT_TYPE)\\\n",
-    "    & ( (Q('_metadata.name') != 'something ridiculous')\\\n",
-    "      | (Q('_metadata.name').in_(['myExperiment3', '3', 'other']))\\\n",
-    "      | (Q('_metadata.name').contains('Experiment33')) )\n",
+    "    Q('document_class.name') == Session.DOCUMENT_TYPE)\\\n",
+    "    & ( (Q('base.name') != 'something ridiculous')\\\n",
+    "      | (Q('base.name').in_(['mySession3', '3', 'other']))\\\n",
+    "      | (Q('base.name').contains('Session33')) )\n",
     "\n",
     "# Print all documents found using above Query\n",
     "for obj in db.find(ndi_query=ndi_query):\n",
@@ -185,12 +185,12 @@
    ],
    "source": [
     "# Updating an experiment's name in the database\n",
-    "e.metadata['name'] = 'new_name'\n",
-    "db.update(e.document, force=True)\n",
+    "e.base['name'] = 'new_name'\n",
+    "db.update(e.document)\n",
     "\n",
     "# Checking to make sure its the new name\n",
     "e_doc = db.find_by_id(e.id)\n",
-    "print(i, e_doc.metadata['name'])"
+    "print(i, e_doc.base['name'])"
    ]
   },
   {
@@ -208,7 +208,7 @@
    ],
    "source": [
     "# Deleting experiment from the database\n",
-    "db.delete(e.document, force=True)\n",
+    "db.delete(e.document)\n",
     "\n",
     "# Checking database if experiment is there\n",
     "print(db.find_by_id(e.id))"
