--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# Creating a dummy document\n",
-    "doc = Document(data={'hello': 'world'}, type_='test_doc', name='og', experiment_id='1234')\n",
+    "doc = Document(data={'hello': 'world'}, type_='test_doc', name='og', session_id='1234')\n",
     "\n",
     "# Adding document to database\n",
     "db.add(doc)"
@@ -58,8 +58,8 @@
     "# Creating new document\n",
     "force = Document({ 'F' : 'ma'}, 'force', 'equation', '1234')\n",
     "\n",
-    "# Adding force document as a dependency of the above document (doc)\n",
-    "doc.add_dependency(force)"
+    "# Adding force document as a dependant of the above document (doc)\n",
+    "doc.add_dependant(force)"
    ]
   },
   {
@@ -71,8 +71,8 @@
     "# Creating new document\n",
     "gas = Document({ 'PV': 'nRT' }, 'gas', 'equation', '1234')\n",
     "\n",
-    "# Adding gas document as a dependency of the above document (force)\n",
-    "force.add_dependency(gas)"
+    "# Adding gas document as a dependant of the above document (force)\n",
+    "force.add_dependant(gas)"
    ]
   },
   {
@@ -106,7 +106,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -146,7 +146,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "# Returning dictionary of dependencies for a document and converting dependency ids to document objects\n",
+    "# Returning dictionary of dependencies for a document and converting dependant ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
@@ -197,7 +197,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -226,7 +226,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'force',\n",
        "  'type': 'equation',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "# Viewing dependency data\n",
+    "# Viewing dependant data\n",
     "result.data['_dependencies']['force'].data"
    ]
   },
@@ -277,7 +277,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'gas',\n",
        "  'type': 'equation',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "# Viewing data of dependency of dependency\n",
+    "# Viewing data of dependant of dependant\n",
     "result.data['_dependencies']['force'].data['_dependencies']['gas'].data"
    ]
   },
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "# Delete force document using its id\n",
-    "db.delete_by_id(force.id, force=True)"
+    "db.delete_by_id(force.id)"
    ]
   },
   {
@@ -339,8 +339,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['80ab2c2d902d4b8eb395c442d698c58d'], 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '80ab2c2d902d4b8eb395c442d698c58d'}, '_depends_on': [], 'hello': 'world'}\n"
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'session_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['80ab2c2d902d4b8eb395c442d698c58d'], 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'session_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '80ab2c2d902d4b8eb395c442d698c58d'}, '_depends_on': [], 'hello': 'world'}\n"
      ]
     }
    ],
