--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Creating a dummy document\n",
-    "doc = Document({'hello': 'world'}, type_='test_doc', name='og', experiment_id='1234')\n",
+    "doc = Document({'hello': 'world'}, type_='test_doc', name='og', session_id='1234')\n",
     "\n",
     "# Adding document to database\n",
     "db.add(doc)"
@@ -60,8 +60,8 @@
     "# Creating new document\n",
     "force = Document({ 'F' : 'ma'}, 'force', 'equation', '1234')\n",
     "\n",
-    "# Adding force document as a dependency of the above document (doc)\n",
-    "doc.add_dependency(force)"
+    "# Adding force document as a dependant of the above document (doc)\n",
+    "doc.add_dependant(force)"
    ]
   },
   {
@@ -73,8 +73,8 @@
     "# Creating new document\n",
     "gas = Document({ 'PV': 'nRT' }, 'gas', 'equation', '1234')\n",
     "\n",
-    "# Adding gas document as a dependency of the above document (force)\n",
-    "force.add_dependency(gas)"
+    "# Adding gas document as a dependant of the above document (force)\n",
+    "force.add_dependant(gas)"
    ]
   },
   {
@@ -108,7 +108,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -148,7 +148,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "# Returing dictionary of dependencies for a document and converting dependency ids to document objects\n",
+    "# Returing dictionary of dependencies for a document and converting dependant ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
@@ -198,7 +198,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'test_doc',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -227,7 +227,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'force',\n",
        "  'type': 'equation',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -277,7 +277,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'gas',\n",
        "  'type': 'equation',\n",
-       "  'experiment_id': '1234',\n",
+       "  'session_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "# Delete force document using its id\n",
-    "db.delete_by_id(force.id, force=True)"
+    "db.delete_by_id(force.id)"
    ]
   },
   {
@@ -338,8 +338,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'd9226cdd50854fb9b9d2f80d88d38a5c'}, '_depends_on': [], 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['d9226cdd50854fb9b9d2f80d88d38a5c'], 'PV': 'nRT'}\n"
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'session_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'd9226cdd50854fb9b9d2f80d88d38a5c'}, '_depends_on': [], 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'session_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['d9226cdd50854fb9b9d2f80d88d38a5c'], 'PV': 'nRT'}\n"
      ]
     }
    ],
