--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -66,7 +66,7 @@
       "text/plain": [
        "{'name': '',\n",
        " 'type': '',\n",
-       " 'experiment_id': '',\n",
+       " 'session_id': '',\n",
        " 'parent_id': '',\n",
        " 'asc_path': '',\n",
        " 'version_depth': 0,\n",
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'mouse'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'session_id': '', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'mouse'}\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# Save changed made to the document\n",
-    "doc.save_updates()"
+    "doc.update()"
    ]
   },
   {
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '5f136b6dae274c828d8f14e4d6048dd1', 'asc_path': ',5f136b6dae274c828d8f14e4d6048dd1', 'version_depth': 1, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'elephant'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'session_id': '', 'parent_id': '5f136b6dae274c828d8f14e4d6048dd1', 'asc_path': ',5f136b6dae274c828d8f14e4d6048dd1', 'version_depth': 1, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'elephant'}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "doc.data['subject'] = 'elephants'\n",
-    "doc.save_updates()"
+    "doc.update()"
    ]
   },
   {
@@ -169,7 +169,7 @@
       "text/plain": [
        "{'_metadata': {'name': '',\n",
        "  'type': '',\n",
-       "  'experiment_id': '',\n",
+       "  'session_id': '',\n",
        "  'parent_id': 'abe407c063f543a9aab609779c33bfa0',\n",
        "  'asc_path': ',abe407c063f543a9aab609779c33bfa0,5f136b6dae274c828d8f14e4d6048dd1',\n",
        "  'version_depth': 2,\n",
@@ -198,7 +198,7 @@
       "text/plain": [
        "[{'_metadata': {'name': '',\n",
        "   'type': '',\n",
-       "   'experiment_id': '',\n",
+       "   'session_id': '',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
@@ -208,7 +208,7 @@
        "  'subject': 'elephant'},\n",
        " {'_metadata': {'name': '',\n",
        "   'type': '',\n",
-       "   'experiment_id': '',\n",
+       "   'session_id': '',\n",
        "   'parent_id': '5f136b6dae274c828d8f14e4d6048dd1',\n",
        "   'asc_path': ',5f136b6dae274c828d8f14e4d6048dd1',\n",
        "   'version_depth': 1,\n",
