--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import NDI_Object, Document, Experiment, Epoch, Probe, Channel\n",
+    "from ndi import NDI_Object, Document, Session, Epoch, Probe, Channel\n",
     "from ndi import DaqSystem, FileNavigator\n",
     "from ndi.database.file_system import FileSystem as Database, BinaryCollection\n",
     "from ndi.query import Query as Q, AndQuery, OrQuery\n",
@@ -83,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating an Experiment object and connecting it to its context\n",
-    "exp = Experiment('test_experiment').connect(\n",
+    "# Creating an Session object and connecting it to its context\n",
+    "exp = Session('test_experiment').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -274,7 +274,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '7bedd384549348b5ab466af8b59580aa',\n",
+       "  'session_id': '7bedd384549348b5ab466af8b59580aa',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -386,7 +386,7 @@
       "text/plain": [
        "[{'_metadata': {'name': 'list-doc',\n",
        "   'type': '',\n",
-       "   'experiment_id': '',\n",
+       "   'session_id': '',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
@@ -426,8 +426,8 @@
      "data": {
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '7bedd384549348b5ab466af8b59580aa',\n",
+       "  'type': 'ndi_session',\n",
+       "  'session_id': '7bedd384549348b5ab466af8b59580aa',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -443,7 +443,7 @@
    ],
    "source": [
     "# Reconnect to an experiment that already exists in database\n",
-    "Experiment('test_experiment').connect(\n",
+    "Session('test_experiment').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=True\n",
@@ -459,8 +459,8 @@
      "data": {
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '6c4d0be6c95c4aa58890501a8ed8c375',\n",
+       "  'type': 'ndi_session',\n",
+       "  'session_id': '6c4d0be6c95c4aa58890501a8ed8c375',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -476,7 +476,7 @@
    ],
    "source": [
     "# Create new experiment that doesn't exist in the database\n",
-    "Experiment('test_dfjslfjdkf').connect(\n",
+    "Session('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=False\n",
