--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import Experiment, DaqSystem, FileNavigator\n",
+    "from ndi import Session, DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import MockReader\n",
     "from ndi.database import FileSystem as Database\n",
     "from ndi import Query as Q\n",
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiating Experiment objects and connecting it to its context (Database and DaqSystems)\n",
-    "e = Experiment(name='myExperiment3').connect(\n",
+    "# Instantiating Session objects and connecting it to its context (Database and DaqSystems)\n",
+    "e = Session(name='mySession3').connect(\n",
     "    database=db,\n",
     "    daq_systems=[ds, ds2]\n",
     ")"
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
+      "Warning: Session.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
      ]
     }
    ],
@@ -107,8 +107,8 @@
     "# finding it based on its id\n",
     "e2doc = db.find_by_id(e.id)\n",
     "\n",
-    "# Recreating the Experiment object from the found experiment document\n",
-    "e2 = Experiment.from_document(e2doc)"
+    "# Recreating the Session object from the found experiment document\n",
+    "e2 = Session.from_document(e2doc)"
    ]
   },
   {
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "# Verifying the Experiments are the same\n",
+    "# Verifying the Sessions are the same\n",
     "e2 == e"
    ]
   },
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
+      "Warning: Session.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
      ]
     },
     {
@@ -158,8 +158,8 @@
    "source": [
     "# Using the find method by passing in a query to get the original experiment \n",
     "# and verifying that its the same\n",
-    "e2 == Experiment.from_document(\n",
-    "    db.find(Q('_metadata.name') == 'myExperiment3')[0]\n",
+    "e2 == Session.from_document(\n",
+    "    db.find(Q('base.name') == 'mySession3')[0]\n",
     ")"
    ]
   },
@@ -181,7 +181,7 @@
    ],
    "source": [
     "# Finding a non-match to show an empty list is returned\n",
-    "db.find(Q('_metadata.name') == 'myExperiment2')"
+    "db.find(Q('base.name') == 'mySession2')"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# Showing find method again with a query for DaqSystems\n",
-    "is_daq_system = Q('_metadata.type') == DaqSystem.DOCUMENT_TYPE\n",
+    "is_daq_system = Q('document_class.name') == DaqSystem.DOCUMENT_TYPE\n",
     "ds_results = db.find(is_daq_system)"
    ]
   },
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '181219cf1ed84cb9a4d4b8bdd5adabd3', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'session_id': '181219cf1ed84cb9a4d4b8bdd5adabd3', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
      ]
     },
     {
@@ -273,7 +273,7 @@
    "outputs": [],
    "source": [
     "# Deleting the created experiment by id\n",
-    "db.delete_by_id(e.id, force=True)"
+    "db.delete_by_id(e.id)"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "source": [
     "# Adding a DaqSystem's document to the database showing that an already existing document \n",
     "# can be upserted\n",
-    "db.upsert(ds.document, force=True)\n",
+    "db.upsert(ds.document)\n",
     "db.find()"
    ]
   },
@@ -385,7 +385,7 @@
    "source": [
     "# Updating a document by id using update_by_id method, passing in a document's id and \n",
     "# a dictionary containing property changes\n",
-    "db.update_by_id(ds.id, { 'name': 'daq2' }, force=True)\n",
+    "db.update_by_id(ds.id, { 'name': 'daq2' })\n",
     "db.find()"
    ]
   },
@@ -426,7 +426,7 @@
    ],
    "source": [
     "# Showing that the names match\n",
-    "print(ds.metadata['name'] == ds2.metadata['name'])"
+    "print(ds.base['name'] == ds2.base['name'])"
    ]
   },
   {
