minor changes for Demo_API_Core

--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Creating an Session object and connecting it to its context\n",
-    "exp = Session('test_experiment').connect(\n",
+    "exp = Session('test_session').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding probes to the database through the experiment\n",
+    "# Creating and adding probes to the database through the session\n",
     "probes = [\n",
     "    Probe('p0', 0, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "# Getting channels via experiment\n",
+    "# Getting channels via session\n",
     "exp.get_channels()"
    ]
   },
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding epochs to the database through experiment\n",
+    "# Creating and adding epochs to the database through session\n",
     "epochs = [\n",
     "    Epoch(daq_system_ids=[daqs[0].id]),\n",
     "    Epoch(daq_system_ids=[daqs[0].id])\n",
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "# Getting epochs via experiment\n",
+    "# Getting epochs via session\n",
     "exp.get_epochs()"
    ]
   },
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding a document to the database though experiment\n",
+    "# Creating and adding a document to the database though session\n",
     "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
     "exp.add_document(doc)"
    ]
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "# accessing exp with current ensures that the experiment is up to date with the database\n",
+    "# accessing exp with current ensures that the session is up to date with the database\n",
     "# is equivalent to ndi_object.refresh()\n",
     "exp.current.get_document_dependencies()"
    ]
@@ -425,7 +425,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': 'test_experiment',\n",
+       "{'_metadata': {'name': 'test_session',\n",
        "  'type': 'ndi_session',\n",
        "  'session_id': '7bedd384549348b5ab466af8b59580aa',\n",
        "  'parent_id': '',\n",
@@ -442,8 +442,8 @@
     }
    ],
    "source": [
-    "# Reconnect to an experiment that already exists in database\n",
-    "Session('test_experiment').connect(\n",
+    "# Reconnect to an session that already exists in database\n",
+    "Session('test_session').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=True\n",
@@ -475,7 +475,7 @@
     }
    ],
    "source": [
-    "# Create new experiment that doesn't exist in the database\n",
+    "# Create new session that doesn't exist in the database\n",
     "Session('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
