--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Creating an Session object and connecting it to its context\n",
-    "exp = Session('test_experiment').connect(\n",
+    "exp = Session('test_session').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding probes to the database through the experiment\n",
+    "# Creating and adding probes to the database through the session\n",
     "probes = [\n",
     "    Probe('p0', 0, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding epochs to the database through experiment\n",
+    "# Creating and adding epochs to the database through session\n",
     "epochs = [\n",
     "    Epoch(daq_system_ids=[daqs[0].id]),\n",
     "    Epoch(daq_system_ids=[daqs[0].id])\n",
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "# Getting channels via experiment\n",
+    "# Getting channels via session\n",
     "exp.get_channels()"
    ]
   },
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting epochs via experiment\n",
+    "# Getting epochs via session\n",
     "epoch = exp.get_epochs()[0]"
    ]
   },
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating and adding a document to the database though experiment\n",
+    "# Creating and adding a document to the database though session\n",
     "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
     "exp.add_document(doc)"
    ]
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "# accessing exp with current ensures that the experiment is up to date with the database\n",
+    "# accessing exp with current ensures that the session is up to date with the database\n",
     "# is equivalent to ndi_object.refresh()\n",
     "exp.current.get_document_dependencies()"
    ]
@@ -471,7 +471,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': 'test_experiment',\n",
+       "{'_metadata': {'name': 'test_session',\n",
        "  'type': 'ndi_session',\n",
        "  'session_id': '874c5180856448fa8b71f3c058661bbe',\n",
        "  'parent_id': '',\n",
@@ -488,8 +488,8 @@
     }
    ],
    "source": [
-    "# Reconnect to an experiment that already exists in database\n",
-    "Session('test_experiment').connect(\n",
+    "# Reconnect to an session that already exists in database\n",
+    "Session('test_session').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
     "    load_existing=True\n",
@@ -521,7 +521,7 @@
     }
    ],
    "source": [
-    "# Create new experiment that doesn't exist in the database\n",
+    "# Create new session that doesn't exist in the database\n",
     "Session('test_abacadaba').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
