--- a/example/Demo_App.ipynb
+++ b/example/Demo_App.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Provisioning the DaqSystem with the experiment, this adds Epoch, Probe, and Channel objects to the database\n",
+    "# Provisioning the DaqSystem with the session, this adds Epoch, Probe, and Channel objects to the database\n",
     "ds.provision(e)"
    ]
   },
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the first channel of the second probe in the experiment\n",
+    "# Get the first channel of the second probe in the session\n",
     "channel = e.get_probes()[1].get_channels()[0]"
    ]
   },
