--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating experiment object and connecting it to database and binary collection\n",
-    "e = Session('test_experiment').connect(\n",
+    "# Creating session object and connecting it to database and binary collection\n",
+    "e = Session('test_session').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
     "    binary_collection=bc\n",
@@ -82,7 +82,7 @@
     "# Creating an NDI Document\n",
     "doc = Document({'content': 'numpy array'}, name='numpy_doc', type_='with_bin')\n",
     "\n",
-    "# Adding NDI Document to experiment\n",
+    "# Adding NDI Document to session\n",
     "e.add_document(doc)"
    ]
   },
@@ -179,7 +179,7 @@
     "# Creating an NDI Document\n",
     "doc = Document({'content': 'byte data'}, name='bytes_doc', type_='with_bin')\n",
     "\n",
-    "# Adding NDI Document to experiment\n",
+    "# Adding NDI Document to session\n",
     "e.add_document(doc)"
    ]
   },
