--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -98,16 +98,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Session.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
+      "Warning: Session.connect() has not been run on this session (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
      ]
     }
    ],
    "source": [
-    "# Testing that experiment (created above) was added to the database upon connection by \n",
+    "# Testing that session (created above) was added to the database upon connection by \n",
     "# finding it based on its id\n",
     "e2doc = db.find_by_id(e.id)\n",
     "\n",
-    "# Recreating the Session object from the found experiment document\n",
+    "# Recreating the Session object from the found session document\n",
     "e2 = Session.from_document(e2doc)"
    ]
   },
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Session.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
+      "Warning: Session.connect() has not been run on this session (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
      ]
     },
     {
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "# Using the find method by passing in a query to get the original experiment \n",
+    "# Using the find method by passing in a query to get the original session \n",
     "# and verifying that its the same\n",
     "e2 == Session.from_document(\n",
     "    db.find(Q('base.name') == 'mySession3')[0]\n",
@@ -238,7 +238,7 @@
    "source": [
     "print(ds_results[0].data)\n",
     "\n",
-    "# Verifying the DaqSystem found in the database matches this experiment's DaqSystem\n",
+    "# Verifying the DaqSystem found in the database matches this session's DaqSystem\n",
     "e.ctx.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
    ]
   },
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deleting the created experiment by id\n",
+    "# Deleting the created session by id\n",
     "db.delete_by_id(e.id)"
    ]
   },
