--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -20,16 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import Session, Document, Query as Q\n",
-    "\n",
-    "from ndi.database.sql import SQL\n",
-    "from ndi.database.file_system import FileSystem, BinaryCollection\n",
+    "from ndi import Session, Document\n",
     "\n",
     "from ndi import DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import CEDSpike2\n",
-    "from ndi.epoch_probe_map import VHIntanChannelGrouping\n",
-    "\n",
-    "from ndi.database.utils import destroy_everything_in"
+    "from ndi.epoch_probe_map import VHIntanChannelGrouping"
    ]
   },
   {
@@ -38,12 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connecting to SQL database, passing in connection string\n",
-    "db = SQL('postgres://postgres:1Password!@localhost:5432/practice')\n",
-    "# Can be run with FileSystem database instead, passing in database directory\n",
-    "# db = FileSystem('./test_db')\n",
-    "# Clear database for clean run\n",
-    "destroy_everything_in(db)"
+    "from did import DID, DIDDocument, Query as Q\n",
+    "from did.database import SQL"
    ]
   },
   {
@@ -52,13 +43,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating/connecting to binary collection, passing in path and collection name\n",
-    "bc = BinaryCollection('../test_db', name='document')"
+    "# Connecting to SQL database, passing in connection string\n",
+    "database = SQL(\n",
+    "    'postgres://postgres:password@localhost:5432/ndi_did_sql_tests', \n",
+    "    hard_reset_on_init = True,\n",
+    "    debug_mode = False,\n",
+    "    verbose_feedback = True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating/connecting to binary collection, passing in path and collection name\n",
+    "binary_collection_path = './example/binary_collections/Demo_API_Core'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<did.database.sql.SQL object at 0x128eac8e0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "did = DID(database, binary_collection_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,68 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating a new Session object and connecting it to its context\n",
-    "exp = Session('demo_api_core').connect(\n",
-    "    directory='../tests/data/intracell_example',\n",
-    "    database=db,\n",
-    "    binary_collection=bc,\n",
-    "    daq_systems=[ds],\n",
-    "    load_existing=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([<ndi.core.Epoch at 0x11e381880>,\n",
-       "  <ndi.core.Epoch at 0x11e45a040>,\n",
-       "  <ndi.core.Epoch at 0x11e45a5e0>],\n",
-       " [<ndi.core.Probe at 0x11e45a820>, <ndi.core.Probe at 0x11e45aa30>],\n",
-       " [<ndi.core.Channel at 0x11e45a8e0>,\n",
-       "  <ndi.core.Channel at 0x11e476a90>,\n",
-       "  <ndi.core.Channel at 0x11e476820>])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Provisioning the DaqSystem with the experiment, this adds Epoch, Probe, and Channel objects to the database\n",
-    "ds.provision(exp)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Epoch at 0x11e428a00>,\n",
-       " <ndi.core.Epoch at 0x11e428550>,\n",
-       " <ndi.core.Epoch at 0x10509b2b0>]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<did.database.sql.SQL object at 0x128eac8e0>\n",
+      "Changes saved.\n"
+     ]
     }
    ],
    "source": [
-    "# Retrieving epochs for this experiment from the database\n",
-    "exp.get_epochs()"
+    "# Creating a new Session object and connecting it to its context\n",
+    "exp = Session('demo_api_core').connect(\n",
+    "    data_interface_database=did,\n",
+    "    daq_systems=[ds],\n",
+    "    load_existing=False\n",
+    ")"
    ]
   },
   {
@@ -147,16 +127,41 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'session_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'session_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n"
+     "ename": "RuntimeError",
+     "evalue": "None must be a DID instance.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-9f77dd6b5546>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Provisioning the DaqSystem with the session, this adds Epoch, Probe, and Channel objects to the database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprovision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/core.py\u001b[0m in \u001b[0;36mprovision\u001b[0;34m(self, session)\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mprovision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 178\u001b[0;31m         \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdaq_systems\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m         \u001b[0mepoch_sets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfile_navigator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_epoch_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/core.py\u001b[0m in \u001b[0;36mconnect\u001b[0;34m(self, data_interface_database, daq_systems, load_existing)\u001b[0m\n\u001b[1;32m    401\u001b[0m         \"\"\"\n\u001b[1;32m    402\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdata_interface_database\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 403\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{data_interface_database} must be a DID instance.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    404\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    405\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_interface_database\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_interface_database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: None must be a DID instance."
      ]
     }
    ],
    "source": [
-    "# Retrieving probes for this experiment from the database\n",
+    "# Provisioning the DaqSystem with the session, this adds Epoch, Probe, and Channel objects to the database\n",
+    "ds.provision(exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieving epochs for this session from the database\n",
+    "exp.get_epochs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieving probes for this session from the database\n",
     "ps = exp.get_probes()\n",
     "\n",
     "# Printing each probe's document data\n",
@@ -166,20 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Probe at 0x11e45a7f0>]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Finding probes using a query\n",
     "by_name = Q('base.name') == 'intra'\n",
@@ -189,24 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Channel at 0x1050d67f0>,\n",
-       " <ndi.core.Channel at 0x11e466760>,\n",
-       " <ndi.core.Channel at 0x11e442a00>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Retrieving channels for this experiment from the database\n",
+    "# Retrieving channels for this session from the database\n",
     "exp.get_channels()"
    ]
   },
@@ -219,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,17 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ndi.context.Context object at 0x11e4284f0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Accessing the context of one of the dependencies\n",
     "print(deps[2].ctx)\n",
@@ -268,18 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'Took the G'\n",
-      "b'ego.'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reading from the document dependant's binary fork\n",
     "with deps[2].binary.open_read_stream() as rs:\n",
@@ -290,72 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
-       " 'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
-       " 'gambino': 'f92e99b514ca4df69ec8b01869692385'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "og_doc.dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['8c10e10ca76e498f9d490f1526f60c38']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "deps[0].depends_on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'og',\n",
-       "  'type': 'rapper',\n",
-       "  'session_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
-       "  'parent_id': '8c10e10ca76e498f9d490f1526f60c38',\n",
-       "  'asc_path': ',8c10e10ca76e498f9d490f1526f60c38',\n",
-       "  'version_depth': 1,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
-       " 'number': 0,\n",
-       " 'trait': 'realest'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Updating a document and saving the changes\n",
     "og_doc.data['number'] = 0\n",
@@ -368,32 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'og',\n",
-       "  'type': 'rapper',\n",
-       "  'session_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': False},\n",
-       " '_dependencies': {'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
-       "  'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
-       "  'gambino': 'f92e99b514ca4df69ec8b01869692385'},\n",
-       " '_depends_on': ['8de2b2ace85945e29131cbd6fd41add2'],\n",
-       " 'number': 0,\n",
-       " 'trait': 'realest'}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Getting the document's oldest version\n",
     "v0_og_doc = og_doc.get_history()[0]\n",
@@ -402,22 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
-       " 'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
-       " 'gambino': 'f92e99b514ca4df69ec8b01869692385'}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The document's previous version retains its dependencies\n",
     "v0_og_doc.dependencies"
@@ -425,19 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'og': <ndi.document.Document object at 0x123bd3ca0>}\n",
-      "---\n",
-      "['gambino_v0', 'og_v1', 'dre_v0', 'm&m_v0', 'og_v0']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Converting a document's dependencies, which are stored as ids, into document objects\n",
     "print(exp.get_document_dependencies())\n",
@@ -450,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,19 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "---\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Showing that all documents were deleted\n",
     "print(exp.current.get_document_dependencies())\n",
