--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "# Find experiment's document in the database\n",
+    "# Find session's document in the database\n",
     "print(db.find_by_id(e.id))"
    ]
   },
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "# Updating an experiment's name in the database\n",
+    "# Updating an session's name in the database\n",
     "e.base['name'] = 'new_name'\n",
     "db.update(e.document)\n",
     "\n",
@@ -207,10 +207,10 @@
     }
    ],
    "source": [
-    "# Deleting experiment from the database\n",
+    "# Deleting session from the database\n",
     "db.delete(e.document)\n",
     "\n",
-    "# Checking database if experiment is there\n",
+    "# Checking database if session is there\n",
     "print(db.find_by_id(e.id))"
    ]
   },
