--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -282,7 +282,7 @@
     "\n",
     "# Verifying that the changes were made\n",
     "#   New version of document has no dependencies\n",
-    "exp.ctx.db.find_by_id(og_doc.id).data"
+    "exp.ctx.did.find_by_id(og_doc.id).data"
    ]
   },
   {
