--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "# Finding the just-added document\n",
-    "exp.ctx.db.find_by_id(doc.id).data"
+    "exp.ctx.did.find_by_id(doc.id).data"
    ]
   },
   {
